samples/_failures_safe/1761458771_430ca8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_50c72773.c: In function ‘tokenize’:
./samples/SAFE/__tmp_50c72773.c:173:5: error: expected expression at end of input
  173 |     while (input[pos] != '\0' && *
      |     ^~~~~
./samples/SAFE/__tmp_50c72773.c:173:5: error: expected declaration or statement at end of input
